# retrieval-based-text-classification

./: .env.example  .gitignore  README.md  pyproject.toml
configs/: prod.yaml
examples/: qwen3_embedding_test.py  qwen3_reranker_test.py
src/retrieval_based_text_classification/: __init__.py  app.py  cli.py  config.py  model_factory.py  rtc.py
src/retrieval_based_text_classification/evaluate/: iflytek_eval.py
src/retrieval_based_text_classification/retriever/: base.py  base_retriever.py  iflytek.py
src/retrieval_based_text_classification/routers/: __init__.py  base.py
