[project]
name = "retrieval-based-text-classification"
version = "0.0.1"
description = ""
authors = [
    {name = "Leroll"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "datasets>=4.0.0",
    "fastapi>=0.116.1",
    "fire>=0.7.0",
    "ipykernel>=6.30.1",
    "ipywidgets>=8.1.7",
    "loguru>=0.7.3",
    "nvitop>=1.5.2",
    "psutil>=7.0.0",
    "pydantic>=2.11.7",
    "pymilvus[bulk_writer]<2.6.0",
    "python-dotenv>=1.1.1",
    "pyyaml>=6.0.2",
    "scipy>=1.15.3",
    "uvicorn>=0.35.0",
    "vllm==0.8.5",
]

[tool.uv]
index-url = "https://mirrors.aliyun.com/pypi/simple/"
package = true
no-cache = true

[project.scripts]
rtc = "retrieval_based_text_classification.cli:cli"
